--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <header>
 
-  <img src="mylogof.png" id="1logo">
+  <img src="logo1.jpeg" id="logo1">
    <h1 id="mytitle">TACO <br> TRUCK</h1>
  
   </header>
