--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>TACO TRUCK </title>
-	<link rel="stylesheet" type="text/css" href="taco.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>TACO TRUCK </title>
+  <link rel="stylesheet" type="text/css" href="taco.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 </head>
-	<p> hgiugiug</p>
+  
 <body>
 <div  class="topnav" id="myTopnav">
-  	<nav class="visible-xs">
+    <nav class="visible-xs">
+    <a href="taco.html">Taco Truck</a>
 
-  		  <!--<ul id="nav-list">
-
--->            
-               <a href="indexmywebsite.html">Taco Truck</a>
-
-               <a href="Relax.html">MENU</a>
-               <a href="#" >FIND US</a>
+               <a href="#mainsec">MENU</a>
+               <a href="#footerrr" >FIND US</a>
             
                  <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i>
                  </a>
@@ -26,9 +26,9 @@
 </nav>
 </div>
 
-<header>
+<header id="myheader">
 
-  <img src="logo1.ipeg" id="logo1">
+  <img src="logo1.png" id="logo1">
    <h1 id="mytitle">TACO <br> TRUCK</h1>
  
   </header>
@@ -36,8 +36,56 @@
 
  
 
-  <main>
- 
+  <main id="mainsec">
+ <section class="mainsection">
+  <h2> TACO
+</h2>
+
+  </section>
+
+<section class="mainsection">
+
+<h2>SALADS</h2>
+</section>
+
+<section class="mainsection">
+
+<h2>DRINKS</h2>
+</section>
+<hr>
+
+<footer id="footerrr">
+  <div id="myfooter">
+  <h5>FOR BUSINESS INQUIRIES:</h5>
+      <div class="row" id="FOOT">
+        <section id="hours" class="col-sm-4">
+          <span>Hours:</span><br>
+          Mon-Fri: 08:00am - 06:00pm<br>
+          
+          <hr class="visible-xs">
+         </section>
+        <section id="address" class="col-sm-4">
+          <span>Email</span><br>
+          tacotruckac3@gmail.com<br>
+          <hr class="visible-xs">
+          phone number:<br>
+        +970593091628.
+         <hr class="visible-xs">
+       </section>
+        <section id="testimonials" class="col-sm-4">
+          <span>Instagram:</span><br>
+           @taco.truck.3 </section>
+      </div>
+  </div>
+  </footer>
+
+
+
+
+
+
+
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
