--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             />
             <div class="menu-item-text">
               <h3 class="menu-item-heading">
-                <span class="menu-item-name">Chicken Tack</span>
+                <span class="menu-item-name">Chicken Taco</span>
               
               </h3>
               <p class="menu-item-desc">
